force-app/main/default/objects/Manager__c/Manager__c.object-meta.xml
<CustomObject>
    <description>Manager responsible for property publishing and operations.</description>
    <label>Manager</label>
    <nameField><label>Manager Name</label><type>Text</type></nameField>
    <pluralLabel>Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>