force-app/main/default/objects/Manager__c/fields/Alternative_Email__c.field-meta.xml
<CustomField><fullName>Alternative_Email__c</fullName><description>Backup email for manager notifications.</description><inlineHelpText>Optional secondary manager email.</inlineHelpText><label>Alternative Email</label><required>false</required><type>Email</type><unique>false</unique></CustomField>