force-app/main/default/objects/Manager__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField><fullName>Alternative_Phone__c</fullName><description>Backup phone number for manager contact.</description><inlineHelpText>Optional secondary phone number.</inlineHelpText><label>Alternative Phone</label><required>false</required><type>Phone</type></CustomField>