force-app/main/default/objects/Manager__c/fields/Email__c.field-meta.xml
<CustomField><fullName>Email__c</fullName><description>Primary manager email used for notifications.</description><inlineHelpText>Daily deletion digests and booking alerts use this email.</inlineHelpText><label>Email</label><required>true</required><trackHistory>true</trackHistory><type>Email</type><unique>false</unique></CustomField>