force-app/main/default/objects/Manager__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><deleteConstraint>SetNull</deleteConstraint><description>Office location for this manager.</description><inlineHelpText>Connect the manager to a verified office location when available.</inlineHelpText><label>Location</label><referenceTo>Location__c</referenceTo><relationshipLabel>Managers</relationshipLabel><relationshipName>Managers</relationshipName><required>false</required><trackHistory>true</trackHistory><type>Lookup</type></CustomField>