force-app/main/default/objects/Manager__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><description>Primary manager phone number.</description><inlineHelpText>Required phone number for operational contact.</inlineHelpText><label>Phone</label><required>true</required><trackHistory>true</trackHistory><type>Phone</type></CustomField>